# ai-portland-rocketleague

./: .gitignore  Presentation.pptx  README.md  TODO.md
AICoachBakkesPlugin/: AICoachBakkesPlugin.cpp  AICoachBakkesPlugin.h  AICoachBakkesPlugin.vcxproj  AICoachBakkesPlugin.vcxproj.filters  GuiBase.h  README.md
DribbleCoach/: .gitignore  AICoachBakkesPlugin.cpp  AICoachBakkesPlugin.h  AICoachBakkesPlugin.sln  AICoachBakkesPlugin.vcxproj  DribbleCoach.cpp  DribbleCoach.h  DribbleCoach.rc  DribbleCoach.sln  DribbleCoach.vcxproj  DribbleCoach.vcxproj.filters  GuiBase.cpp  GuiBase.h  README.md  TODO.md  data.csv  version.h
ReplayAnalysis/: README.md
ReplayAnalysis/examples/: CAE7013011EFA9DB5C4584B38DA4222F.feedback.md  CAE7013011EFA9DB5C4584B38DA4222F.goals.json.csv  CAE7013011EFA9DB5C4584B38DA4222F.highlights.json.csv  CAE7013011EFA9DB5C4584B38DA4222F.player_stats.json.csv  CAE7013011EFA9DB5C4584B38DA4222F.query.txt
ReplayAssistant/: Cargo.toml  README.md  delete_all_assistants.sh  delete_all_files.sh  run.sh  server.py
ReplayAssistant/plugin/: GuiBase.cpp  GuiBase.h  README.md  ReplayAssistant.cpp  ReplayAssistant.h  ReplayAssistant.sln  ReplayAssistant.vcxproj  ReplayAssistant.vcxproj.filters  version.h
ReplayAssistant/service/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  proxy_server.py  run.sh  run_proxy.sh  run_remote.sh  run_server_tunnel.sh  server.py
ReplayAssistant/service/replays/: 2832A01011EFC5F758BE91B7198661CE.replay
ReplayAssistant/service/src/: ai.rs  convert.rs  extract.rs  lib.rs  main.rs
ReplayAssistant/src/: ai.rs  convert.rs  extract.rs  lib.rs  main.rs  openai.rs  query.rs
ReplayAssistant/src/ai/: openai.rs
ReplayCoaches/: README.md
ReplayCoaches/examples/: CAE7013011EFA9DB5C4584B38DA4222F.feedback.md
ScreenShareCoach/: README.md  package-lock.json  package.json
ScreenShareCoach/server/: delete-all.mjs  upload.mjs
ScreenShareCoach/src/: api.js
ScreenShareFeedback/: README.md
ScreenShareFeedback/server/: index.mjs  queryGemini.mjs  upload.mjs
ScreenShareFeedback/src/: App.jsx  VideoPlayer.jsx  api.js
