[package]
name = "replayassistant"
version = "0.2.0"
edition = "2021"
authors = ["Scott Davis <scottleedavis@gmail.com>"]
description = "A Rocket League replay OpenAI assistant"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
dotenv = "0.15"
serde_json = "1.0"
jsonschema = "0.16"
plotters = "0.3"
flate2 = "1.0"      # For gzip compression
base64 = "0.21"     # For Base64 encoding
glob = "0.3"

[lib]
name = "replayassistant"
path = "src/lib.rs"
