[package]
name = "ReplayAssistant"
version = "0.2.0"
edition = "2021"
authors = ["Scott Davis <scottleedavis@gmail.com>"]
description = "A Rocket League replay OpenAI Assistant"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde_json = "1.0"
jsonschema = "0.16"

[lib]
name = "ReplayAssistant"
path = "src/lib.rs"
